# sqlx-transparent-json-decode

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  test.rs
test_migrations/: 20231123235015_init.sql
